# BoardGamesLib

./: .clang-format-ignore  .gitignore  Board.h  CMakeLists.txt  Cell.h  Makefile  common.h  todo
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
dogan/: CMakeLists.txt  DoganBoard.cpp  DoganBoard.h  DoganCell.cpp  DoganCell.h  DoganConfig.cpp  DoganConfig.h  DoganGame.cpp  DoganGame.h  default.h  enums.h  main.cpp  move.sh
dogan/include/: DoganBank.h  DoganBoard.h  DoganBuilding.h  DoganBuilding.tpp  DoganCard.h  DoganCell.h  DoganConfig.h  DoganConfigBuilder.h  DoganEdge.h  DoganExceptions.h  DoganGame.h  DoganPlayer.h  DoganPort.h  DoganRoad.h  DoganStructure.h  DoganStructure.tpp  DoganVertex.h  config.enum.h  default.h  direction.enum.h  enums.h
dogan/libs/: Bank.cpp  Bank.h  Bank.test.cpp  Board.cpp  Board.h  Board.test.cpp  CMakeLists.txt  Cell.cpp  Cell.h  Cell.test.cpp  DoganBank.cpp  DoganBank.h  DoganBank.test.cpp  DoganBoard.cpp  DoganBoard.h  DoganBoard.test.cpp  DoganCell.cpp  DoganCell.h  DoganCell.test.cpp  DoganConfig.cpp  DoganConfig.h  DoganConfigBuilder.cpp  DoganEdge.cpp  DoganEdge.h  DoganGame.cpp  DoganGame.test.cpp  DoganPlayer.cpp  DoganPlayer.h  DoganPort.cpp  DoganPort.h  DoganStructure.cpp  DoganStructure.h  DoganStructure.tpp  DoganVertex.h  Game.cpp  Game.test.cpp  Player.cpp  Player.h  config.enum.h  default.h  (+2 more)
dogan/libs/Configuration/: CMakeLists.txt  Config.cpp  Config.h  ConfigBuilder.cpp  DoganConfig.cpp  DoganConfig.h  DoganConfigBuilder.cpp  config.enum.h  defaultConfiguration.h
dogan/libs/GraphElements/: CMakeLists.txt  DoganEdge.cpp  DoganEdge.h  DoganElementHelpers.cpp  DoganElementHelpers.h  DoganGraphElement.h  DoganVertex.cpp  DoganVertex.h  ElementHelpers.cpp  ElementHelpers.h  ElementHelpers.test.cpp
dogan/libs/Structures/: Building.cpp  Building.h  CMakeLists.txt  DoganBuilding.cpp  DoganBuilding.h  DoganPort.cpp  DoganPort.h  DoganRoad.cpp  DoganRoad.h  DoganStructure.cpp  DoganStructure.h  DoganStructureType.cpp  DoganStructureType.h  Port.h  Road.h  Structure.cpp  Structure.h
dogan/src/: CMakeLists.txt  DoganBank.cpp  DoganBoard.cpp  DoganBuilding.cpp  DoganCard.cpp  DoganCell.cpp  DoganConfig.cpp  DoganConfigBuilder.cpp  DoganEdge.cpp  DoganGame.cpp  DoganPlayer.cpp  DoganPort.cpp  DoganRoad.cpp  DoganStructure.cpp  DoganVertex.cpp  DoganVertex.h  default.h  direction.enum.cpp  enums.cpp  enums.h  main.cpp
include/: AxialHexDirection.h  Board.h  BoardInterface.h  Cell.h  CellInterface.h  Coordinate.h  Exceptions.h  HexagonalDirection.h  Node.h  Vertex.h  common.h  newBoard.ppp
src/: AxialHexDirection.cpp  AxialHexDirection.test.cpp  BoardInterface.h  CMakeLists.txt  Coordinate.tpp  HexagonalDirection.cpp  Node.cpp
tools/: format.sh
